2012-12-27  Jesper Öqvist <jesper@llbit.se>

    * Pressure plates now have the correct size

1.1.1 - 2012-11-19
    * Don't warn when not able to load the world of the loaded scene
    * Fixed door rendering issues
    * Implemented new blocks from Minecraft 1.4.2:
      + Carrot Block
      + Potato Block
      + Wooden Button
      + Beacon (Placeholder: Glass Block)
      + Command Block
      + Cobblestone Walls

1.1.0 - 2012-09-21
    * The Moved By Piston block is not rendered
    * Unknown block types are not rendered (used to be rendered as
      question mark blocks)
    * Increased the maximum sun intensity for the sun intensity slider
    * Improved vine rendering: draw top vines
    * Improved underwater rendering & various water rendering issues
    * Fixed ice block rendering issue
    * Fixed error causing cobblestone stairs to render with the smooth
      stone texture
    * Fixed crash when viewing chunks with certain blocks in the map view
    * Don't treat water as part of a cave in cave view
    * Added benchmark mode
    * Deleting chunks now correctly updates the map view

1.0.15 - 2012-08-07
    * Fixed activated detector rail rendering bug
    * Canvas size should update correctly when loading a new scene now
      even on Mac
    * The octree is saved with the scene description in order
      to accelerate scene loading and simplify sharing of scenes
      between different machines
    * Fixed error when saving render dump for a scene with width
      and height not equal

1.0.14 - 2012-08-05
    * Silverfish blocks are now rendered with the correct texture
    * Fixed a case where blocks behind chests would be replaced by
      stone blocks
    * Redstone wire is now rendered with correct color and direction in
      most cases
    * Redstone repeater is rendered with correct direction and with the
      two attached redstone torches
    * Fixed possible deadlock when changing canvas size